Web Scraping Homework Submission 2

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -13,7 +13,7 @@
   <div class="container-fluid"></div>
 	  <div class="jumbotron text-center">
 	    <h1>Mission to Mars</h1>
-		<p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data!</a></p>
+		<p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
 	  </div>
 		
 	</div>
@@ -29,7 +29,7 @@
 				</div>
 			</div>
 
-			<div class="col-md-5" id="facts-box">
+			<div class="col-md-5" id="facts-box">&#160;
 				<div class="text-white bg-style sty">
 					<h3>Mars Facts</h3>
 					<hr class="new1">
@@ -37,7 +37,7 @@
 				</div>
 			</div>
 
-			<div class="col-md-7" id="weather-box">
+			<div class="col-md-7" id="weather-box">&#160;
 				<div class="text-white bg-style">
 					<h2>Weather on Mars</h2>
 					<hr class="new1">
